<resources>
    <string name="app_name">ApiDex</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">No es un usuario válido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrate">¿No tienes una cuenta? Regístrate aquí</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username_reg">Username</string>
    <string name="password_reg">Password</string>
    <string name="email_reg">Email</string>
    <string name="go_login">¿Ya tienes cuenta? Inicia sesión aquí</string>
    <string name="send_reg">Registrar</string>
    <string name="menu_pokedex">Pokédex</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_capturados">Capturados</string>
    <string name="menu_perfil">Perfil</string>
    <string name="profile_username">Username</string>
    <string name="profile_email">Email</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="menu_username">Username</string>
    <string name="idPokedex">#001</string>
    <string name="nombre_pokemon">Bulbasaur</string>
    <string name="region">Kanto</string>
    <string name="tipo1">Planta</string>
    <string name="tipo2">Veneno</string>
    <string name="pc">PC</string>
    <string name="pcNumber">450</string>
    <string name="valoracion">Valoración</string>
    <string name="descriptionFotoPokemon">Foto Pokémon</string>
    <string name="descriptionFotoFav">Botón Favorito</string>
    <string name="descriptionFotoCap">Botón Capturado</string>
    <string name="descriptionFotoVal1">Foto valoración 1</string>
    <string name="descriptionFotoVal2">Foto valoración 2</string>
    <string name="descriptionFotoVal3">Foto valoración 3</string>
    <string name="tit_ataqueR">Ataque Rápido</string>
    <string name="tit_ataqueC">Ataque Cargado</string>
    <string name="ataqueR">Látigo Cepa</string>
    <string name="ataqueC">Bomba Lodo</string>
    <string name="btnDuplicar">Duplicar</string>
    <string name="btnEvolucionar">Evolucionar</string>
    <string name="btnCrear">Crear</string>
    <string name="btn_buscar">Buscar</string>
    <string name="generacion_filter">Generación</string>
    <string name="tipo_filter">Tipo</string>
    <string name="titulo_filtro">Filtrar Pokémon</string>
    <string name="titulo_registro">Registro</string>
    <string name="btn_guardar">Guardar</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="menu_equipo">Equipos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actualizarPRO">ACTUALIZAR A PRO</string>
    <string name="precio">0,99€</string>
</resources>