<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grease"
    tools:context=".ui.nuevoPokemon.NuevoPokemonActivity">

    <EditText
        android:id="@+id/editText_PC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pc"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_valoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/valoracion"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editText_PC"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_PC"
        app:layout_constraintTop_toBottomOf="@+id/editText_PC" />

    <EditText
        android:id="@+id/editText_ataqueRapido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/tit_ataqueR"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editText_valoracion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_valoracion"
        app:layout_constraintTop_toBottomOf="@+id/editText_valoracion" />

    <EditText
        android:id="@+id/editText_ataqueCargado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/tit_ataqueC"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editText_ataqueRapido"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_ataqueRapido"
        app:layout_constraintTop_toBottomOf="@+id/editText_ataqueRapido" />

    <Button
        android:id="@+id/btn_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:backgroundTint="#F91515"
        android:text="@string/btnCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_ataqueCargado" />

</androidx.constraintlayout.widget.ConstraintLayout>