<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.perfil.PerfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grease">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_user"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/grease"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="111dp"
                android:layout_height="100dp"
                android:layout_gravity="center|left"
                android:src="@drawable/ic_profile_user" />

            <LinearLayout
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/profile_username"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView_email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/profile_email"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_eliminarCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:backgroundTint="#F91515"
            android:text="@string/eliminar_cuenta"
            app:layout_constraintEnd_toEndOf="@+id/btn_editarPerfil"
            app:layout_constraintStart_toStartOf="@+id/btn_editarPerfil"
            app:layout_constraintTop_toBottomOf="@+id/btn_editarPerfil" />

        <Button
            android:id="@+id/btn_editarPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:backgroundTint="#5E19AE"
            android:text="@string/editarPerfil"
            app:layout_constraintEnd_toEndOf="@+id/cardView_user"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/cardView_user"
            app:layout_constraintTop_toBottomOf="@+id/cardView_user" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>